tests/baselines/reference/getAndSetNotIdenticalType.errors.txt
tests/cases/compiler/getAndSetNotIdenticalType.ts(2,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/getAndSetNotIdenticalType.ts(2,9): error TS2380: 'get' and 'set' accessor must have the same type 'string'.
tests/cases/compiler/getAndSetNotIdenticalType.ts(5,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/getAndSetNotIdenticalType.ts (3 errors) ====
    class C {
        get x(): number {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2380: 'get' and 'set' accessor must have the same type 'string'.
!!! related TS2730 tests/cases/compiler/getAndSetNotIdenticalType.ts:2:9: The respective 'set' accessor has the type 'string'.
            return 1;
        }
        set x(v: string) { }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }